<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="106dp"
        android:text="@string/welcome_what_do_you_want_to_do"
        android:textColor="#f0470a"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRoomInfo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:background="#215bcf"
        android:text="@string/see_room_info"
        android:textColor="#fff"
        android:textColorHighlight="#fa5260"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <Button
        android:id="@+id/btnRentCal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:background="#215bcf"
        android:text="@string/calculate_rent"
        android:textColor="#fff"
        android:textColorHighlight="#fa5260"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <Button
        android:id="@+id/btnAddTenant"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:background="#215bcf"
        android:text="@string/add_new_tenant"
        android:textColor="#fff"
        android:textColorHighlight="#fa5260"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRoomInfo" />

    <Button
        android:id="@+id/btnFinalCal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:background="#215bcf"
        android:text="@string/do_final_calculation"
        android:textColor="#fff"
        android:textColorHighlight="#fa5260"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRentCal" />

</androidx.constraintlayout.widget.ConstraintLayout>